--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           POSTGRES_USER: mosleh
           POSTGRES_PASSWORD: 1234
-          POSTGRES_DB: Elyasam_Reatausrant
+          POSTGRES_DB: Elyasam_Reataurant
         ports: 
           - 5432:5432
         options: >-
