Complete docker-compose file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     services:
      
       postgres:
-        image: postgres
+        image: postgres:16.1-alpine3.19
         env:
           POSTGRES_USER: mosleh
           POSTGRES_PASSWORD: 1234
