--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,16 @@ services:
       - POSTGRES_USER=mosleh
       - POSTGRES_PASSWORD=1234
       - POSTGRES_DB=Elyasam_Restaurant
+    healthcheck:
+      test: "exit 0"
   api:
     build:
       context: .
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
       - DB_SOURCE=postgres://mosleh:1234@postgres:5432/Elyasam_Restaurant?sslmode=disable
+    depends_on:
+      postgres:
+        condition: service_healthy
